# nlp-sr

./: .env.example  .replit  main.py  package-lock.json  pyproject.toml  replit.md  requirements.txt  test_citations.ris  vercel.json
FolderFounder/: .env.example  .gitignore  CLAUDE.md  CURRENT_STATUS.md  DEPLOYMENT_GUIDE.md  IMPLEMENTATION_OVERVIEW.md  INTERFACE_PREVIEW.md  LICENSE  Makefile  README.md  deploy-heroku.sh  docker-compose.yml  main.py  package.json  requirements.txt  start.sh
FolderFounder/app/: main.py
FolderFounder/attached_assets/: llm-screening-v3_1750349724330.html  sample_citations_1750358600600.ris
FolderFounder/backend/: .env.example  (+2 more)
api/: index.py
attached_assets/: Pasted--Otto-SR-Comple-1750349003895_1750349003895.txt  Pasted--import-json-import-logging-import-time-from-typing-import-Dict-List-Optional-Any-Union-from-dat-1750354007510_1750354007510.txt  Pasted-import-asyncio-import-json-import-time-import-logging-from-typing-import-Dict-List-Optional-Any--1750353789408_1750353789409.txt  Pasted-import-json-import-csv-import-pandas-as-pd-import-requests-import-time-import-logging-import-asyncio-1750355006585_1750355006586.txt  Pasted-import-os-import-json-import-requests-from-typing-import-Dict-List-Any-Tuple-import-re-from-datet-1750353809867_1750353809867.txt  Pasted-import-os-import-json-import-requests-from-typing-import-Dict-List-Any-Tuple-import-re-from-datet-1750354092897_1750354092898.txt  Pasted-import-re-import-logging-from-typing-import-List-Dict-Optional-Any-from-pathlib-import-Path-from--1750353519904_1750353519904.txt
(+35 files in other folders)
