[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "aiofiles>=24.1.0",
    "anthropic>=0.54.0",
    "fastapi>=0.115.13",
    "langchain-core>=0.3.65",
    "langchain-openai>=0.3.24",
    "openai>=1.88.0",
    "psycopg2-binary>=2.9.10",
    "pydantic>=2.11.7",
    "python-multipart>=0.0.20",
    "sqlalchemy>=2.0.41",
    "uvicorn>=0.34.3",
]
